--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,10 @@ target 'meauApp' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
   target 'meauAppTests' do
     inherit! :complete
     # Pods for testing
