--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-paper": "^4.7.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.2.4",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
