--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,12 @@ target 'meauApp' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
+  pod 'RNCCheckbox', :path => '../node_modules/@react-native-community/checkbox'
+
   target 'meauAppTests' do
     inherit! :complete
     # Pods for testing
