--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-firebase/app": "^11.1.0",
+    "@react-native-firebase/auth": "^11.1.0",
     "i": "^0.3.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
