--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^11.1.0",
     "@react-native-firebase/auth": "^11.1.0",
     "@react-native-firebase/firestore": "^11.1.2",
+    "@react-native-firebase/storage": "^11.2.0",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "i": "^0.3.6",
@@ -22,6 +23,7 @@
     "react-native": "0.63.4",
     "react-native-elements": "^3.3.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^3.3.2",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
