--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-simple-chat": "^0.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.2.4",
     "styled-components": "^5.2.1"
