--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "meauApp",
   "version": "0.0.1",
   "private": true,
+  "rnpm": {
+    "assets": [
+      "fonts"
+    ]
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
